--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -7,7 +7,7 @@
 {% block front_header %}
     <header class="header">
         <div class="container">
-            <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="James Lee" />
+            <img class="profile-image img-responsive pull-left" src="{{ asset('bundles/app/img/dev-foto.png')}}" alt="James Lee" />
             <div class="profile-content pull-left">
                 <h1 class="name">Tsurkanov Mikhail</h1>
                 <h2 class="desc">Symfony Developer (ERP)</h2>
@@ -83,8 +83,7 @@
                         <h2 class="heading">Skills</h2>
                         <div class="content">
                             <p class="intro">
-                                Intro about your skills goes here. Keep the list lean and only show your primary skillset. You can always provide a link to your Linkedin or Coderwall profile so people can get more info there.</p>
-                            
+
                             <div class="skillset">
                                
                                 <div class="item">
