--- a/src/AppBundle/Resources/public/css/styles.css
+++ b/src/AppBundle/Resources/public/css/styles.css
@@ -1,12 +1,4 @@
-/*   
- * Template Name: Developer - Responsive Website Template for Developers
- * Version: 1.0
- * Author: 3rd Wave Media
- * Twitter: @3rdwave_themes
- * License: Creative Commons Attribution 3.0 License
- * Website: http://themes.3rdwavemedia.com/
-*/
-/* ======= Base ======= */
+
 body {
   font-family: 'Lato', arial, sans-serif;
   color: #434343;
@@ -98,20 +90,7 @@ a.dotted-link:hover {
   text-decoration: none;
   color: #49515a;
 }
-/*
-iframe {
 
-    .header {
-        padding: 0;
-    }
-}
-
-.iframe-wrapper {
-    overflow: auto;
-    -webkit-overflow-scrolling:touch;
-}
-*/
-/* ======= Header ======= */
 .header {
   padding: 30px 0;
   background: #f5f5f5;
@@ -161,7 +140,7 @@ iframe {
   font-size: 20px;
   padding-top: 8px;
 }
-/* ======= Sections======= */
+
 .sections-wrapper {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -183,8 +162,7 @@ iframe {
   margin-right: 5px;
   font-size: 14px;
 }
-/* About Section */
-/* Latest Section */
+
 .latest .item {
   margin-bottom: 30px;
 }
@@ -275,7 +253,7 @@ iframe {
 .latest .featured-image .ribbon .text:after {
   right: 0;
 }
-/* Projects Section */
+
 .projects .item {
   margin-bottom: 30px;
 }
@@ -291,7 +269,7 @@ iframe {
 .projects .item .title a:hover {
   color: #5f6b77;
 }
-/* Work Section */
+
 .experience .item {
   margin-bottom: 30px;
 }
@@ -344,7 +322,7 @@ iframe {
 .info li:last-child {
   margin-bottom: 0;
 }
-/* Skills Section */
+
 .skills .intro {
   margin-bottom: 30px;
 }
@@ -374,7 +352,6 @@ iframe {
   height: 15px;
   background: #66cb8c;
 }
-/* Testimonials section */
 .testimonials .item {
   margin-bottom: 30px;
 }
@@ -403,7 +380,6 @@ iframe {
 .testimonials .item .source .title {
   color: #999999;
 }
-/* Education section */
 .education .item {
   margin-bottom: 30px;
 }
@@ -425,7 +401,7 @@ iframe {
   color: #b0b7bf;
   font-weight: 500;
 }
-/* Language Section */
+
 .languages .item {
   margin-bottom: 15px;
 }
@@ -441,7 +417,7 @@ iframe {
 .languages .item .fa {
   color: #79d19a;
 }
-/* Blog Section */
+
 .blog .item {
   margin-bottom: 30px;
 }
@@ -458,7 +434,7 @@ iframe {
 .blog .item:last-child {
   margin-bottom: 0;
 }
-/* List section */
+
 .list ul li {
   margin-bottom: 10px;
 }
@@ -487,7 +463,7 @@ iframe {
 .credits .btn {
   margin-bottom: 15px;
 }
-/* ======= Footer ======= */
+
 .footer {
   background: #32383e;
   color: #fff;
@@ -504,7 +480,52 @@ iframe {
 .footer .fa-heart {
   color: #fb866a;
 }
-/* Extra small devices (phones, less than 768px) */
+
+.proPic {
+  height:380px;
+  overflow:hidden;
+  width:100%;
+  min-width:100%;
+  position:relative
+}
+.projectItem {
+  position:relative;
+  margin:-2px 0 0
+}
+.projectItem .proPic {
+  background-position:50% 50%;
+  background-repeat:no-repeat
+}
+.projectItem .over {
+  padding: 100px 0;
+  background:rgba(0,0,0,.7);
+  width:100%;
+  height:100%;
+  color:#fff;
+  position:absolute;
+  top:0;
+  left:0;
+  font-size:20px;
+  z-index:50;
+  opacity:1
+}
+.projectItem h1 {
+  font-family:'ProximaNovaBold', sans-serif;
+  font-weight:bold;
+  font-size:30px;
+  line-height:1.1;
+  text-transform:uppercase;
+  color:#fff;
+}
+.projectItem p {
+  margin: 20px auto;
+  max-width: 800px;
+}
+.projectItem .over p {
+  padding-top: 30px;
+  max-width: 600px;
+}
+
 @media (max-width: 767px) {
   .header {
     text-align: center;
